@@ -1,5 +1,5 @@
 %global VERSION  6.7.2
-%global Patchlevel  3
+%global Patchlevel  2
 
 Name:           ImageMagick
 Version:        %{VERSION}
