@@ -13,7 +13,7 @@ PACKAGE_NAME='ImageMagick'
 PACKAGE_VERSION='6.7.2'
 PACKAGE_PERL_VERSION='6.72'
 PACKAGE_LIB_VERSION="0x672"
-PACKAGE_RELEASE="3"
+PACKAGE_RELEASE="2"
 PACKAGE_LIB_VERSION_NUMBER="6,7,2,${PACKAGE_RELEASE}"
 PACKAGE_RELEASE_DATE=`date +%F`
 PACKAGE_STRING="$PACKAGE_NAME $PACKAGE_VERSION"
